--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                 <div class="flex items-center justify-between flex-1 max-w-[50%]">
                     <button id="homeButton"     class="px-4 py-2 border-2 border-gray-500 rounded-md">Home</button>
                     <button id="versionsButton" class="px-4 py-2 border-2 border-gray-500 rounded-md">Versions</button>
-                    <button id="modsButton"     class="px-4 py-2 border-2 border-gray-500 rounded-md">Mods / Resource Packs</button>
+                    <button id="modsButton"     class="px-4 py-2 border-2 border-gray-500 rounded-md">Misc</button>
                     <button id="settingsButton" class="px-4 py-2 border-2 border-gray-500 rounded-md">Settings</button>
                 </div>
         
@@ -60,7 +60,7 @@
 <script>
     document.getElementById('homeButton').addEventListener('click', () => window.electronAPI.loadPage('home.html'));
     document.getElementById('versionsButton').addEventListener('click', () => window.electronAPI.loadPage('versions.html'));
-    document.getElementById('modsButton').addEventListener('click', () => window.electronAPI.loadPage('mods.html'));
+    document.getElementById('modsButton').addEventListener('click', () => window.electronAPI.loadPage('misc.html'));
     document.getElementById('settingsButton').addEventListener('click', () => window.electronAPI.loadPage('settings.html'));
 
     window.electronAPI.onPageContent((content) => {
