--- a/public/others/home.html
+++ b/public/others/home.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electron App</title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="../output.css">
 </head>
 
 <div id="mainContent" class="flex-1 bg-gray-700 rounded-lg flex flex-col items-center gap-4">
