Fixed sizing overflowing our of the main container & added scrollbar to prevent it

--- a/public/others/home.html
+++ b/public/others/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../output.css">
 </head>
 
-<div id="mainContent" class="flex-1 bg-gray-700 rounded-lg flex flex-col items-center gap-4">
+<div id="mainContent" class="flex-1 bg-gray-700 rounded-lg flex flex-col items-center gap-4 w-full h-full">
     <h1 class="text-2xl font-bold text-white">Welcome to the Minecraft Launcher</h1>
     <div class="flex flex-col items-center gap-2">
         <button type="button" class="w-80 px-4 py-2 bg-gray-800 border-2 border-gray-500 rounded-md">Play</button>
