--- a/public/others/versions.html
+++ b/public/others/versions.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../output.css">
 </head>
 
-<div id="mainContent" class="bg-gray-700 rounded-lg flex flex-col items-center gap-4 w-full">
+<div id="mainContent" class="bg-gray-700 rounded-lg flex flex-col items-center gap-4 w-full h-full">
 
     <div class="bg-gray-800 w-full flex items-center justify-between p-2 border border-gray-600 rounded-md">
         <input type="text" placeholder="Search For a Version"
@@ -20,9 +20,9 @@
         </button>
     </div>
 
-    <h1 class="text-2xl font-semibold text-gray-300">Versions Already Insalled</h1>
+    <h1 class="w-full text-center text-2xl font-semibold text-gray-300 border-b border-gray-600 pb-2">Versions Already Insalled</h1>
 
-    <div class="w-full h-full space-y-4 overflow-y-auto">
+    <div class="w-full h-[90%] space-y-4 overflow-y-auto pr-2">
         <!-- List Item -->
         <div class="flex items-center justify-between bg-gray-800 p-3 rounded-md border border-gray-700">
             <p class="text-sm text-gray-300">
@@ -33,7 +33,6 @@
             </button>
         </div>
 
-        <!-- Duplicate the above block for each item -->
         <div class="flex items-center justify-between bg-gray-800 p-3 rounded-md border border-gray-700">
             <p class="text-sm text-gray-300">
                 Minecraft Version 1.20.4 | Fabric API Ver 0.97.2 | Size: 28MB | Last Time Played: 7 days ago
@@ -52,7 +51,6 @@
             </button>
         </div>
         
-        <!-- Duplicate the above block for each item -->
         <div class="flex items-center justify-between bg-gray-800 p-3 rounded-md border border-gray-700">
             <p class="text-sm text-gray-300">
                 Minecraft Version 1.8.9 | Forge API Ver 1.23.4 | Size: 9MB | Last Time Played: 51 days ago
@@ -62,7 +60,6 @@
             </button>
         </div>
 
-        <!-- Repeat as needed -->
     </div>
 
 
