Added Account avatar

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,17 @@
             </div>
     
             <!-- Right-aligned Button -->
-            <div>
-                <button class="px-4 py-2 border-2 border-gray-500 rounded-md">Exit</button>
+            <div class="flex items-center gap-4 hover:bg-gray-800 transition-colors duration-400 rounded-md py-2 px-3 cursor-pointer">
+                <img src="https://minotar.net/helm/fe02b95b8a084ef59558233480c6b954/512.png" alt="avatar"
+                    class="inline-block relative object-cover object-center rounded-lg w-10 h-10" />
+                <div>
+                    <h6 class="font-semibold">
+                        Embrasadas
+                    </h6>
+                    <p class="text-gray-300 text-sm">
+                        Minecraft Account
+                    </p>
+                </div>
             </div>
         </div>
     
