--- a/public/others/versions.html
+++ b/public/others/versions.html
@@ -57,7 +57,7 @@
     
     <!-- Overlay -->
     <div id="overlay" class="hidden fixed inset-0 flex items-center justify-center backdrop-blur-sm">
-        <div class="bg-gray-800 p-6 rounded-md shadow-md w-1/2 h-1/3">
+        <div class="bg-gray-800 p-6 rounded-md shadow-md w-1/2 h-1/2 min-h-1/3">
             <div class="flex items-center justify-between">
                 <h2 class="text-lg font-semibold text-white">Add New Version</h2>
                 <button id="closeOverlay" class="px-4 py-2 hover:bg-gray-600 text-white rounded fill-white">
@@ -66,13 +66,44 @@
                     </svg>
                 </button>
             </div>
-
+<!-- 
             <select id="versionSelect" class="w-full mt-2 p-2 rounded bg-gray-700 text-white">
                 <option value="1.21.1">Minecraft 1.21.1</option>
                 <option value="1.20.4">Minecraft 1.20.4</option>
                 <option value="1.12.2">Minecraft 1.12.2</option>
-            </select>
-            
+            </select> -->
+            <div class="w-full h-[90%] flex flex-col items-center gap-4">
+                <input type="text" id="search" onkeyup="filterList()" placeholder="Search For a Version"
+                    class="w-full h-10 py-2 px-4 border-b border-gray-600 text-sm focus:z-10 focus:outline-0 disabled:opacity-50 disabled:pointer-events-none"
+                >
+                <div class="w-full h-[90%]">
+                    <ul id="versionList" class="h-full grid grid-cols-3 gap-2 pr-2 overflow-y-auto">
+                        <li class="ver">Minecraft 1.21.1</li>
+                        <li class="ver">Minecraft 1.20.4</li>
+                        <li class="ver">Minecraft 1.20.2</li>
+                        <li class="ver">Minecraft 1.19.4</li>
+                        <li class="ver">Minecraft 1.18.2</li>
+                        <li class="ver">Minecraft 1.17.1</li>
+                        <li class="ver">Minecraft 1.16.5</li>
+                        <li class="ver">Minecraft 1.15.2</li>
+                        <li class="ver">Minecraft 1.14.4</li>
+                        <li class="ver">Minecraft 1.13.2</li>
+                        <li class="ver">Minecraft 1.12.2</li>
+                        <li class="ver">Minecraft 1.11.2</li>
+                        <li class="ver">Minecraft 1.10.2</li>
+                        <li class="ver">Minecraft 1.9.4</li>
+                        <li class="ver">Minecraft 1.8.9</li>
+                        <li class="ver">Minecraft 1.7.10</li>
+                        <li class="ver">Minecraft 1.6.4</li>
+                        <li class="ver">Minecraft 1.5.2</li>
+                        <li class="ver">Minecraft 1.4.7</li>
+                        <li class="ver">Minecraft 1.3.2</li>
+                        <li class="ver">Minecraft 1.2.5</li>
+                        <li class="ver">Minecraft 1.1</li>
+                        <li class="ver">Minecraft 1.0</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
