temporarly using the version here

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,69 @@
                         class="w-80 px-4 py-2 bg-gray-800 border-2 border-gray-500 rounded-md">Play</button>
                     <h1 class="font-semibold text-gray-300">Selected Version 1.21.1 With Account Embrassadas</h1>
                 </div>
+
+                <div class="flex flex-col items-center gap-4">
+                    <select id="version-select"
+                        class="p-2 pe-9 w-full rounded-md text-sm bg-gray-800 text-gray-200 border-2 border-gray-500 focus:outline-none focus:ring focus:ring-gray-600">
+                        <option value="1.21.1">Minecraft 1.21.1</option>
+                        <option value="1.20.4">Minecraft 1.20.4</option>
+                        <option value="1.20.3">Minecraft 1.20.3</option>
+                        <option value="1.20.2">Minecraft 1.20.2</option>
+                        <option value="1.20.1">Minecraft 1.20.1</option>
+                        <option value="1.20.0">Minecraft 1.20.0</option>
+                        <option value="1.19.4">Minecraft 1.19.4</option>
+                        <option value="1.19.3">Minecraft 1.19.3</option>
+                        <option value="1.19.2">Minecraft 1.19.2</option>
+                        <option value="1.19.1">Minecraft 1.19.1</option>
+                        <option value="1.19.0">Minecraft 1.19.0</option>
+                        <option value="1.18.2">Minecraft 1.18.2</option>
+                        <option value="1.18.1">Minecraft 1.18.1</option>
+                        <option value="1.18.0">Minecraft 1.18.0</option>
+                        <option value="1.17.1">Minecraft 1.17.1</option>
+                        <option value="1.17.0">Minecraft 1.17.0</option>
+                        <option value="1.16.5">Minecraft 1.16.5</option>
+                        <option value="1.16.4">Minecraft 1.16.4</option>
+                        <option value="1.16.3">Minecraft 1.16.3</option>
+                        <option value="1.16.2">Minecraft 1.16.2</option>
+                        <option value="1.16.1">Minecraft 1.16.1</option>
+                        <option value="1.16.0">Minecraft 1.16.0</option>
+                        <option value="1.15.2">Minecraft 1.15.2</option>
+                        <option value="1.15.1">Minecraft 1.15.1</option>
+                        <option value="1.15.0">Minecraft 1.15.0</option>
+                        <option value="1.14.4">Minecraft 1.14.4</option>
+                        <option value="1.14.3">Minecraft 1.14.3</option>
+                        <option value="1.14.2">Minecraft 1.14.2</option>
+                        <option value="1.14.1">Minecraft 1.14.1</option>
+                        <option value="1.14.0">Minecraft 1.14.0</option>
+                        <option value="1.13.2">Minecraft 1.13.2</option>
+                        <option value="1.13.1">Minecraft 1.13.1</option>
+                        <option value="1.13.0">Minecraft 1.13.0</option>
+                        <option value="1.12.2">Minecraft 1.12.2</option>
+                        <option value="1.12.1">Minecraft 1.12.1</option>
+                        <option value="1.12.0">Minecraft 1.12.0</option>
+                        <option value="1.11.2">Minecraft 1.11.2</option>
+                        <option value="1.11.1">Minecraft 1.11.1</option>
+                        <option value="1.11.0">Minecraft 1.11.0</option>
+                        <option value="1.10.2">Minecraft 1.10.2</option>
+                        <option value="1.10.1">Minecraft 1.10.1</option>
+                        <option value="1.10.0">Minecraft 1.10.0</option>
+                        <option value="1.9.4">Minecraft 1.9.4</option>
+                        <option value="1.9.3">Minecraft 1.9.3</option>
+                        <option value="1.9.2">Minecraft 1.9.2</option>
+                        <option value="1.9.1">Minecraft 1.9.1</option>
+                        <option value="1.9.0">Minecraft 1.9.0</option>
+                        <option value="1.8.9">Minecraft 1.8.9</option>
+                        <option value="1.8.8">Minecraft 1.8.8</option>
+                        <option value="1.8.7">Minecraft 1.8.7</option>
+                        <option value="1.8.6">Minecraft 1.8.6</option>
+                        <option value="1.8.5">Minecraft 1.8.5</option>
+                        <option value="1.8.4">Minecraft 1.8.4</option>
+                        <option value="1.8.3">Minecraft 1.8.3</option>
+                        <option value="1.8.2">Minecraft 1.8.2</option>
+                        <option value="1.8.1">Minecraft 1.8.1</option>
+                        <option value="1.8.0">Minecraft 1.8.0</option>
+                    </select>
+                </div>
             </div>
         </div>
     </div>
